fix: fetch all pages when getting coinbase holdings
